<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"
        android:visibility="visible"
        android:focusable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/news_item_cardView"
        android:layout_height="wrap_content"
>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                    android:contentDescription="@string/image"
                    android:id="@+id/news_item_ImageView"
                    android:scaleType="centerCrop"
                    android:src="@drawable/error_image"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        <TextView
                android:paddingTop="5dp"
                android:id="@+id/news_item_category"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:text="@string/russia"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@android:color/white"
                android:background="@drawable/background_color_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/news_item_tittle"
                android:textSize="20sp"
                android:text="@string/tittle"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:layout_below="@id/news_item_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:textSize="13sp"
                android:id="@+id/news_item_description"
                android:paddingStart="10dp"
                android:text="@string/description"
                android:paddingEnd="10dp"
                android:layout_below="@id/news_item_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/news_item_date"
                android:text="@string/time"
                android:layout_alignParentEnd="true"
                android:paddingEnd="15dp"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_below="@id/news_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>
