<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/splash_screen_root"
        android:layout_height="match_parent"
        tools:context=".Activities.SplashScreen">

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:contentDescription="@string/image"
               android:id="@+id/splash_screen_background"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:src="@drawable/app_splash_background"
               android:scaleType="centerCrop"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <ImageView
                android:src="@drawable/ic_cat"
                android:id="@+id/splash_screen_logo"
                android:layout_width="60sp"
                android:contentDescription="@string/image"
                android:layout_height="60dp"/>
        <TextView
                android:text="@string/asdgroup"
                android:textSize="25sp"
                android:padding="10dp"
                android:id="@+id/splash_screen_tittle"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lato_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/splash_screen_seeksBar"
                android:thumb="@android:color/transparent"
                android:progressDrawable="@drawable/progress_bar_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/splash_screen_seeksBar_hint"
                android:padding="10dp"
                android:text="@string/please_wait"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_light"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>